# roulette

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  main.rs  state.rs
src/engine/: avoid.rs  brouter.rs  constraints.rs  gpx_util.rs  mod.rs  waypoints.rs
src/routes/: avoid_upload.rs  daily.rs  generate.rs  geocode.rs  mod.rs  pages.rs
static/: app.css
templates/: daily.html  index.html
